force-app/main/default/objects/FieloPLT__Program__c/fields/F_Max_answers__c.field-meta.xml
<CustomField>
    <fullName>F_Max_answers__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>Maximum number of rewarded (to the responder) answers to one question</inlineHelpText>
    <label>Max answers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>