force-app/main/default/objects/FieloPLT__Program__c/fields/F_Max_comments__c.field-meta.xml
<CustomField>
    <fullName>F_Max_comments__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>Maximum number of rewarded (to the commenter) comments in one post</inlineHelpText>
    <label>Max comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>