force-app/main/default/objects/FieloPLT__Program__c/fields/F_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>F_Network_Id__c</fullName>
    <externalId>true</externalId>
    <label>Network Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>